--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.5)
 project(brownian C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(brownian main.c particle.h)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
+
+add_executable(brownian main.c thpool.c)
 
 target_link_libraries(brownian m)
