--- a/brownian.cbp
+++ b/brownian.cbp
@@ -4,87 +4,83 @@
 	<Project>
 		<Option title="brownian"/>
 		<Option makefile_is_custom="1"/>
-		<Option compiler="clang"/>
+		<Option compiler="gcc"/>
 		<Option virtualFolders="CMake Files\;"/>
 		<Build>
 			<Target title="all">
-				<Option working_dir="/home/deim1508/Git/brownian"/>
+				<Option working_dir="D:/Egyetem/Allamvizsga/brownian"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="rebuild_cache">
-				<Option working_dir="/home/deim1508/Git/brownian"/>
+				<Option working_dir="D:/Egyetem/Allamvizsga/brownian"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="edit_cache">
-				<Option working_dir="/home/deim1508/Git/brownian"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="brownian">
-				<Option output="/home/deim1508/Git/brownian/brownian" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/deim1508/Git/brownian"/>
+				<Option output="D:/Egyetem/Allamvizsga/brownian/brownian.exe" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="D:/Egyetem/Allamvizsga/brownian"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
-				<Option compiler="clang"/>
+				<Option compiler="gcc"/>
 				<Compiler>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/bin/../lib/clang/3.4/include"/>
-					<Add directory="/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/include"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
+					<Add directory="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/7.2.0/include"/>
+					<Add directory="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/7.2.0/include-fixed"/>
+					<Add directory="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/7.2.0/../../../../x86_64-w64-mingw32/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 brownian"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 brownian"/>
+					<CompileFile command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="brownian/fast">
-				<Option output="/home/deim1508/Git/brownian/brownian" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/deim1508/Git/brownian"/>
+				<Option output="D:/Egyetem/Allamvizsga/brownian/brownian.exe" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="D:/Egyetem/Allamvizsga/brownian"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
-				<Option compiler="clang"/>
+				<Option compiler="gcc"/>
 				<Compiler>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/bin/../lib/clang/3.4/include"/>
-					<Add directory="/usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/include"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
+					<Add directory="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/7.2.0/include"/>
+					<Add directory="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/7.2.0/include-fixed"/>
+					<Add directory="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/7.2.0/../../../../x86_64-w64-mingw32/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 brownian/fast"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/deim1508/Git/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 brownian/fast"/>
+					<CompileFile command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="edit_cache">
+				<Option working_dir="D:/Egyetem/Allamvizsga/brownian"/>
+				<Option type="4"/>
+				<MakeCommands>
+					<Build command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/mingw-w64/x86_64-7.2.0-posix-seh-rt_v5-rev1/mingw64/bin/mingw32-make.exe -f &quot;D:/Egyetem/Allamvizsga/brownian/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
-		<Unit filename="/home/deim1508/Git/brownian/main.c">
+		<Unit filename="D:/Egyetem/Allamvizsga/brownian/main.c">
 			<Option target="brownian"/>
 		</Unit>
-		<Unit filename="/home/deim1508/Git/brownian/particle.h">
+		<Unit filename="D:/Egyetem/Allamvizsga/brownian/particle.h">
 			<Option target="brownian"/>
 		</Unit>
-		<Unit filename="/home/deim1508/Git/brownian/CMakeLists.txt">
+		<Unit filename="D:/Egyetem/Allamvizsga/brownian/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
 		</Unit>
 	</Project>
