--- a/brownian.cbp
+++ b/brownian.cbp
@@ -1,100 +1,100 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <CodeBlocks_project_file>
-	<FileVersion major="1" minor="6"/>
-	<Project>
-		<Option title="brownian"/>
-		<Option makefile_is_custom="1"/>
-		<Option compiler="gcc"/>
-		<Option virtualFolders="CMake Files\;"/>
-		<Build>
-			<Target title="all">
-				<Option working_dir="/home/rebeka/Documents/brownian"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="rebuild_cache">
-				<Option working_dir="/home/rebeka/Documents/brownian"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="edit_cache">
-				<Option working_dir="/home/rebeka/Documents/brownian"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="brownian">
-				<Option output="/home/rebeka/Documents/brownian/brownian" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/rebeka/Documents/brownian"/>
-				<Option object_output="./"/>
-				<Option type="1"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="brownian/fast">
-				<Option output="/home/rebeka/Documents/brownian/brownian" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/rebeka/Documents/brownian"/>
-				<Option object_output="./"/>
-				<Option type="1"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian/fast"/>
-					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j12 -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-		</Build>
-		<Unit filename="/home/rebeka/Documents/brownian/data.h">
-			<Option target="brownian"/>
-		</Unit>
-		<Unit filename="/home/rebeka/Documents/brownian/main.c">
-			<Option target="brownian"/>
-		</Unit>
-		<Unit filename="/home/rebeka/Documents/brownian/particle.h">
-			<Option target="brownian"/>
-		</Unit>
-		<Unit filename="/home/rebeka/Documents/brownian/pinning.h">
-			<Option target="brownian"/>
-		</Unit>
-		<Unit filename="/home/rebeka/Documents/brownian/vertex.h">
-			<Option target="brownian"/>
-		</Unit>
-		<Unit filename="/home/rebeka/Documents/brownian/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\"/>
-		</Unit>
-	</Project>
+   <FileVersion major="1" minor="6" />
+   <Project>
+      <Option title="brownian" />
+      <Option makefile_is_custom="1" />
+      <Option compiler="gcc" />
+      <Option virtualFolders="CMake Files\;" />
+      <Build>
+      <Target title="all">
+         <Option working_dir="/home/rebeka/Documents/brownian" />
+         <Option type="4" />
+         <MakeCommands>
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 all" />
+            <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
+            <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+            <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="edit_cache">
+         <Option working_dir="/home/rebeka/Documents/brownian" />
+         <Option type="4" />
+         <MakeCommands>
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 edit_cache" />
+            <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
+            <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+            <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="rebuild_cache">
+         <Option working_dir="/home/rebeka/Documents/brownian" />
+         <Option type="4" />
+         <MakeCommands>
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 rebuild_cache" />
+            <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
+            <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+            <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="brownian">
+         <Option output="/home/rebeka/Documents/brownian/brownian" prefix_auto="0" extension_auto="0" />
+         <Option working_dir="/home/rebeka/Documents/brownian" />
+         <Option object_output="./" />
+         <Option type="1" />
+         <Option compiler="gcc" />
+         <Compiler>
+            <Add directory="/usr/include" />
+            <Add directory="/usr/include/x86_64-linux-gnu" />
+            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include" />
+            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed" />
+            <Add directory="/usr/local/include" />
+         </Compiler>
+         <MakeCommands>
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian" />
+            <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
+            <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+            <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+         </MakeCommands>
+      </Target>
+      <Target title="brownian/fast">
+         <Option output="/home/rebeka/Documents/brownian/brownian" prefix_auto="0" extension_auto="0" />
+         <Option working_dir="/home/rebeka/Documents/brownian" />
+         <Option object_output="./" />
+         <Option type="1" />
+         <Option compiler="gcc" />
+         <Compiler>
+            <Add directory="/usr/include" />
+            <Add directory="/usr/include/x86_64-linux-gnu" />
+            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include" />
+            <Add directory="/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed" />
+            <Add directory="/usr/local/include" />
+         </Compiler>
+         <MakeCommands>
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian/fast" />
+            <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
+            <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+            <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
+         </MakeCommands>
+      </Target>
+      </Build>
+      <Unit filename="/home/rebeka/Documents/brownian/data.h">
+         <Option target="brownian"/>
+      </Unit>
+      <Unit filename="/home/rebeka/Documents/brownian/main.c">
+         <Option target="brownian"/>
+      </Unit>
+      <Unit filename="/home/rebeka/Documents/brownian/particle.h">
+         <Option target="brownian"/>
+      </Unit>
+      <Unit filename="/home/rebeka/Documents/brownian/pinning.h">
+         <Option target="brownian"/>
+      </Unit>
+      <Unit filename="/home/rebeka/Documents/brownian/vertex.h">
+         <Option target="brownian"/>
+      </Unit>
+      <Unit filename="/home/rebeka/Documents/brownian/CMakeLists.txt">
+          <Option virtualFolder="CMake Files\" />
+      </Unit>
+   </Project>
 </CodeBlocks_project_file>
