--- a/brownian.cbp
+++ b/brownian.cbp
@@ -37,8 +37,8 @@
             <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
          </MakeCommands>
       </Target>
-      <Target title="brownian">
-         <Option output="/home/rebeka/Documents/brownian/brownian" prefix_auto="0" extension_auto="0" />
+      <Target title="brownian602">
+         <Option output="/home/rebeka/Documents/brownian/brownian602" prefix_auto="0" extension_auto="0" />
          <Option working_dir="/home/rebeka/Documents/brownian" />
          <Option object_output="./" />
          <Option type="1" />
@@ -51,14 +51,14 @@
             <Add directory="/usr/local/include" />
          </Compiler>
          <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian" />
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian602" />
             <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
             <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
             <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
          </MakeCommands>
       </Target>
-      <Target title="brownian/fast">
-         <Option output="/home/rebeka/Documents/brownian/brownian" prefix_auto="0" extension_auto="0" />
+      <Target title="brownian602/fast">
+         <Option output="/home/rebeka/Documents/brownian/brownian602" prefix_auto="0" extension_auto="0" />
          <Option working_dir="/home/rebeka/Documents/brownian" />
          <Option object_output="./" />
          <Option type="1" />
@@ -71,7 +71,7 @@
             <Add directory="/usr/local/include" />
          </Compiler>
          <MakeCommands>
-            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian/fast" />
+            <Build command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 brownian602/fast" />
             <CompileFile command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 &quot;$file&quot;" />
             <Clean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
             <DistClean command="/usr/bin/make -f &quot;/home/rebeka/Documents/brownian/Makefile&quot;  VERBOSE=1 clean" />
@@ -79,19 +79,19 @@
       </Target>
       </Build>
       <Unit filename="/home/rebeka/Documents/brownian/data.h">
-         <Option target="brownian"/>
+         <Option target="brownian602"/>
       </Unit>
       <Unit filename="/home/rebeka/Documents/brownian/main.c">
-         <Option target="brownian"/>
+         <Option target="brownian602"/>
       </Unit>
       <Unit filename="/home/rebeka/Documents/brownian/particle.h">
-         <Option target="brownian"/>
+         <Option target="brownian602"/>
       </Unit>
       <Unit filename="/home/rebeka/Documents/brownian/pinning.h">
-         <Option target="brownian"/>
+         <Option target="brownian602"/>
       </Unit>
       <Unit filename="/home/rebeka/Documents/brownian/vertex.h">
-         <Option target="brownian"/>
+         <Option target="brownian602"/>
       </Unit>
       <Unit filename="/home/rebeka/Documents/brownian/CMakeLists.txt">
           <Option virtualFolder="CMake Files\" />
